--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "store2": "^2.12.0",
     "swagger-ui-react": "^3.52.3",
     "tailwindcss": "^1.9.6",
-    "webpack": "^4.0.0"
+    "webpack": "^4.0.0",
+    "winston": "^3.8.2"
   }
 }
